[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/New Piskel.png" type="Texture" id=1]
[ext_resource path="res://Player2.gd" type="Script" id=2]
[ext_resource path="res://P1DeathLaser.tscn" type="PackedScene" id=3]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 12.0
height = 8.0

[sub_resource type="CircleShape2D" id=3]
radius = 36.0139

[node name="Player2" type="RigidBody2D"]
collision_layer = 133121
collision_mask = 133121
physics_material_override = SubResource( 1 )
linear_damp = 0.0
script = ExtResource( 2 )

[node name="P1DeathLaser" parent="." instance=ExtResource( 3 )]
position = Vector2( 13, 0 )
LaserColor = Color( 1, 0, 0, 1 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
rotation = 1.5708
polygon = PoolVector2Array( 0.999942, -16, -1.00006, -16, -4.00005, -13, -4.00004, -9.99999, -7.00003, -6.99997, -10, -9.99996, -12, -9.99996, -14, -7.99995, -14, 2.00005, -12, 4.00004, -9.99999, 4.00004, -7, 1.00003, -3.99997, 7.00001, -3.99997, 8.00001, -5.99996, 10, -5.99996, 12, -2.99995, 15, 3.00005, 15, 6.00004, 12, 6.00004, 9.99998, 4.00003, 7.99999, 4.00003, 6.99999, 7, 0.999975, 10, 3.99996, 12, 3.99996, 14, 1.99995, 14, -8.00005, 12, -10, 9.99996, -10, 6.99997, -7.00003, 3.99996, -10, 3.99995, -13 )
disabled = true

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 30, 0 )

[node name="WTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Position2D2" type="Position2D" parent="."]
position = Vector2( -40, 0 )

[node name="ITimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 2 )

[node name="Position2D3" type="Position2D" parent="."]
position = Vector2( -12, 0 )

[node name="GigaGravity" type="Area2D" parent="."]
position = Vector2( 400, 0 )
scale = Vector2( 0.4, 0.4 )
collision_layer = 65536
collision_mask = 65536
space_override = 1
gravity_point = true
gravity = 500.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="GigaGravity"]
shape = SubResource( 3 )

[node name="Position2D" type="Position2D" parent="GigaGravity"]
